--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Station Heat Charts</title>
+    <title>168th Street Station in Manhattan</title>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <style>
+        body {
+            background-color: #1b1b1b;
+            color: #f1f1f1;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            margin: 40px;
+        }
+        h2 {
+            color: #f1f1f1;
+            border-bottom: 1px solid #444;
+            padding-bottom: 5px;
+        }
+        #tempChart, #excessChart {
+            background-color: #1b1b1b;
+            border-radius: 6px;
+            box-shadow: 0 0 10px #000;
+        }
+    </style>
 </head>
 <body>
+
 <h2>Temperature and Heat Index Over Time</h2>
 <div id="tempChart" style="height: 500px; width: 100%; margin-bottom: 50px;"></div>
 
