--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
     <meta charset="utf-8">
     <title>168th Street Station in Manhattan</title>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <style>
-        body {
-            background-color: #1b1b1b;
-            color: #f1f1f1;
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            margin: 40px;
-        }
-        h2 {
-            color: #f1f1f1;
-            border-bottom: 1px solid #444;
-            padding-bottom: 5px;
-        }
-        #tempChart, #excessChart {
-            background-color: #1b1b1b;
-            border-radius: 6px;
-            box-shadow: 0 0 10px #000;
-        }
-    </style>
+<style>
+    body {
+        background-color: #1b1b1b;
+        color: #e1e1e1;
+        font-family: 'Helvetica Neue', Arial, system-ui, sans-serif;
+        margin: 40px;
+    }
+
+    h2 {
+        font-family: 'Helvetica Neue', Arial, system-ui, sans-serif;
+        font-size: 22px;
+        font-weight: 700;
+        letter-spacing: 0.3px;
+        color: #e1e1e1;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        border-bottom: 1px solid #444;
+        padding-bottom: 4px;
+    }
+
+    #tempChart, #excessChart {
+        background-color: #1b1b1b;
+        border-radius: 6px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    }
+</style>
 </head>
 <body>
 <h2>Temperature and Heat Index Over Time</h2>
