--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         borderColor: '#777',
         style: { color: '#fff' }
     }
+        }); // ✅ closes setOptions
 // First chart: Temperature & Heat Index
 Highcharts.chart('tempChart', {
     chart: {
