--- a/index.html
+++ b/index.html
@@ -3,33 +3,38 @@
 <head>
     <meta charset="utf-8">
     <title>168th Street Station in Manhattan</title>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-<style>
-    body {
-        background-color: #1b1b1b;
-        color: #e1e1e1;
-        font-family: 'Helvetica Neue', Arial, system-ui, sans-serif;
-        margin: 40px;
-    }
 
-    h2 {
-        font-family: 'Helvetica Neue', Arial, system-ui, sans-serif;
-        font-size: 22px;
-        font-weight: 700;
-        letter-spacing: 0.3px;
-        color: #e1e1e1;
-        margin-top: 40px;
-        margin-bottom: 20px;
-        border-bottom: 1px solid #444;
-        padding-bottom: 4px;
-    }
+    <!-- Core Highcharts & modules -->
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
-    #tempChart, #excessChart {
-        background-color: #1b1b1b;
-        border-radius: 6px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-    }
-</style>
+    <style>
+        body {
+            background-color: #1b1b1b;
+            color: #e1e1e1;
+            font-family: 'Helvetica Neue', Arial, system-ui, sans-serif;
+            margin: 40px;
+        }
+
+        h2 {
+            font-size: 22px;
+            font-weight: 700;
+            letter-spacing: 0.3px;
+            color: #e1e1e1;
+            margin-top: 40px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #444;
+            padding-bottom: 4px;
+        }
+
+        #tempChart, #excessChart {
+            background-color: #1b1b1b;
+            border-radius: 6px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+        }
+    </style>
 </head>
 <body>
 <h2>Temperature and Heat Index Over Time</h2>
@@ -39,7 +44,7 @@
 <div id="excessChart" style="height: 400px; width: 100%;"></div>
 
 <script>
-    Highcharts.setOptions({
+Highcharts.setOptions({
     chart: {
         backgroundColor: '#1b1b1b',
         style: {
@@ -72,9 +77,10 @@
         borderColor: '#777',
         style: { color: '#fff' }
     }
-        }); // ✅ closes setOptions
+});
 </script>
-    <script>
+
+<script>
 function syncExtremes(e) {
   const thisChart = this.chart;
   Highcharts.each(Highcharts.charts, function (chart) {
@@ -105,34 +111,32 @@ fetch('168_station_data.csv')
     const heatIndexData = data.map(d => [d.time, d.heat]);
     const excessData = data.map(d => [d.time, d.heat - d.temp]);
 
-    Highcharts.chart('tempChart', {
-      chart: { zoomType: 'x' },
+    Highcharts.stockChart('tempChart', {
+      rangeSelector: { selected: 1 },
       title: { text: 'Temperature and Heat Index Over Time' },
       xAxis: {
-        type: 'datetime',
         crosshair: { color: '#ffffff', width: 1 },
-        events: { setExtremes: syncExtremes },
-        title: { text: 'Time' }
+        events: { setExtremes: syncExtremes }
       },
-      tooltip: { shared: true },
       yAxis: { title: { text: 'Temperature (°F)' } },
+      tooltip: { shared: true },
+      exporting: { enabled: true },
       series: [
         { name: 'Temperature', data: tempData, color: '#00c1d5' },
         { name: 'Heat Index', data: heatIndexData, color: '#ff6f61' }
       ]
     });
 
-    Highcharts.chart('excessChart', {
-      chart: { zoomType: 'x' },
+    Highcharts.stockChart('excessChart', {
+      rangeSelector: { selected: 1 },
       title: { text: 'Heat Excess (Heat Index - Temperature)' },
       xAxis: {
-        type: 'datetime',
         crosshair: { color: '#ffffff', width: 1 },
-        events: { setExtremes: syncExtremes },
-        title: { text: 'Time' }
+        events: { setExtremes: syncExtremes }
       },
-      tooltip: { shared: true },
       yAxis: { title: { text: 'Excess Heat (°F)' } },
+      tooltip: { shared: true },
+      exporting: { enabled: true },
       series: [{
         name: 'Heat Excess',
         data: excessData,
@@ -141,7 +145,7 @@ fetch('168_station_data.csv')
         fillOpacity: 0.5
       }]
     });
-  });
+});
 </script>
 </body>
 </html>
