--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>168th Street Station in Manhattan</title>
-
-  <!-- Highcharts core + modules -->
   <script src="https://code.highcharts.com/highcharts.js"></script>
-  <script src="https://code.highcharts.com/modules/exporting.js"></script>
-  <script src="https://code.highcharts.com/modules/export-data.js"></script>
-  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
   <style>
     body {
       background-color: #1b1b1b;
@@ -37,127 +31,121 @@
   </style>
 </head>
 <body>
-<h2>Temperature and Heat Index Over Time</h2>
-<div id="tempChart" style="height: 500px; width: 100%; margin-bottom: 50px;"></div>
+  <h2>Temperature and Heat Index Over Time</h2>
+  <div id="tempChart" style="height: 500px; width: 100%; margin-bottom: 50px;"></div>
 
-<h2>Heat Index - Temperature Difference (Heat Excess)</h2>
-<div id="excessChart" style="height: 400px; width: 100%;"></div>
+  <h2>Heat Index - Temperature Difference (Heat Excess)</h2>
+  <div id="excessChart" style="height: 400px; width: 100%;"></div>
 
-<script>
-Highcharts.setOptions({
-  chart: {
-    backgroundColor: '#1b1b1b',
-    style: {
-      fontFamily: 'Helvetica Neue, Arial, sans-serif'
-    }
-  },
-  title: {
-    style: {
-      color: '#e1e1e1',
-      fontWeight: '600',
-      fontSize: '16px'
-    }
-  },
-  xAxis: {
-    labels: { style: { color: '#cccccc' } },
-    lineColor: '#444',
-    tickColor: '#444'
-  },
-  yAxis: {
-    title: { style: { color: '#e1e1e1' } },
-    labels: { style: { color: '#cccccc' } },
-    gridLineColor: '#333'
-  },
-  legend: {
-    itemStyle: { color: '#e1e1e1' },
-    itemHoverStyle: { color: '#ffffff' }
-  },
-  tooltip: {
-    backgroundColor: '#333',
-    borderColor: '#777',
-    style: { color: '#fff' }
-  }
-});
-</script>
-
-<script>
-function syncExtremes(e) {
-  const thisChart = this.chart;
-  Highcharts.each(Highcharts.charts, function (chart) {
-    if (chart !== thisChart && chart) {
-      if (chart.xAxis[0].setExtremes) {
-        chart.xAxis[0].setExtremes(e.min, e.max, true, false);
+  <script>
+    Highcharts.setOptions({
+      chart: {
+        backgroundColor: '#1b1b1b',
+        style: {
+          fontFamily: 'Helvetica Neue, Arial, sans-serif'
+        }
+      },
+      title: {
+        style: {
+          color: '#e1e1e1',
+          fontWeight: '600',
+          fontSize: '16px'
+        }
+      },
+      xAxis: {
+        labels: { style: { color: '#cccccc' } },
+        lineColor: '#444',
+        tickColor: '#444'
+      },
+      yAxis: {
+        title: { style: { color: '#e1e1e1' } },
+        labels: { style: { color: '#cccccc' } },
+        gridLineColor: '#333'
+      },
+      legend: {
+        itemStyle: { color: '#e1e1e1' },
+        itemHoverStyle: { color: '#ffffff' }
+      },
+      tooltip: {
+        backgroundColor: '#333',
+        borderColor: '#777',
+        style: { color: '#fff' }
       }
+    });
+
+    function syncExtremes(e) {
+      const thisChart = this.chart;
+      Highcharts.each(Highcharts.charts, function (chart) {
+        if (chart !== thisChart && chart) {
+          if (chart.xAxis[0].setExtremes) {
+            chart.xAxis[0].setExtremes(e.min, e.max, true, false);
+          }
+        }
+      });
     }
-  });
-}
 
-function parseCSVRow(row) {
-  const [time, temp, heat] = row.split(',');
-  return {
-    time: new Date(time).getTime(),
-    temp: parseFloat(temp),
-    heat: parseFloat(heat)
-  };
-}
+    function parseCSVRow(row) {
+      const [time, temp, heat] = row.split(',');
+      return {
+        time: new Date(time).getTime(),
+        temp: parseFloat(temp),
+        heat: parseFloat(heat)
+      };
+    }
 
-fetch('168_station_data.csv')
-  .then(res => res.text())
-  .then(csv => {
-    const rows = csv.trim().split('\n').slice(1);
-    const data = rows.map(parseCSVRow);
+    fetch('168_station_data.csv')
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split('\n').slice(1); // Skip header
+        const data = rows.map(parseCSVRow);
 
-    const tempData = data.map(d => [d.time, d.temp]);
-    const heatIndexData = data.map(d => [d.time, d.heat]);
-    const excessData = data.map(d => [d.time, d.heat - d.temp]);
+        const tempData = data.map(d => [d.time, d.temp]);
+        const heatIndexData = data.map(d => [d.time, d.heat]);
+        const excessData = data.map(d => [d.time, d.heat - d.temp]);
 
-    Highcharts.chart('tempChart', {
-      chart: {
-        zoomType: 'x',
-        panning: true,
-        panKey: 'shift'
-      },
-      title: { text: 'Temperature and Heat Index Over Time' },
-      xAxis: {
-        type: 'datetime',
-        crosshair: { color: '#ffffff', width: 1 },
-        events: { setExtremes: syncExtremes },
-        title: { text: 'Time' }
-      },
-      tooltip: { shared: true },
-      yAxis: { title: { text: 'Temperature (°F)' } },
-      exporting: { enabled: true },
-      series: [
-        { name: 'Temperature', data: tempData, color: '#00c1d5' },
-        { name: 'Heat Index', data: heatIndexData, color: '#ff6f61' }
-      ]
-    });
+        Highcharts.chart('tempChart', {
+          chart: {
+            zoomType: 'x',
+            panning: true
+          },
+          title: { text: 'Temperature and Heat Index Over Time' },
+          xAxis: {
+            type: 'datetime',
+            crosshair: { color: '#ffffff', width: 1 },
+            events: { setExtremes: syncExtremes },
+            title: { text: 'Time' }
+          },
+          tooltip: { shared: true },
+          yAxis: { title: { text: 'Temperature (°F)' } },
+          series: [
+            { name: 'Temperature', data: tempData, color: '#00c1d5' },
+            { name: 'Heat Index', data: heatIndexData, color: '#ff6f61' }
+          ]
+        });
 
-    Highcharts.chart('excessChart', {
-      chart: {
-        zoomType: 'x',
-        panning: true,
-        panKey: 'shift'
-      },
-      title: { text: 'Heat Excess (Heat Index - Temperature)' },
-      xAxis: {
-        type: 'datetime',
-        crosshair: { color: '#ffffff', width: 1 },
-        events: { setExtremes: syncExtremes },
-        title: { text: 'Time' }
-      },
-      tooltip: { shared: true },
-      yAxis: { title: { text: 'Excess Heat (°F)' } },
-      exporting: { enabled: true },
-      series: [{
-        name: 'Heat Excess',
-        data: excessData,
-        color: '#9b59b6',
-        type: 'area',
-        fillOpacity: 0.5
-      }]
-    });
-});
-</script>
+        Highcharts.chart('excessChart', {
+          chart: {
+            type: 'area',
+            zoomType: 'x',
+            panning: true
+          },
+          title: { text: 'Heat Excess (Heat Index - Temperature)' },
+          xAxis: {
+            type: 'datetime',
+            crosshair: { color: '#ffffff', width: 1 },
+            events: { setExtremes: syncExtremes },
+            title: { text: 'Time' }
+          },
+          tooltip: { shared: true },
+          yAxis: { title: { text: 'Excess Heat (°F)' } },
+          series: [{
+            name: 'Heat Excess',
+            data: excessData,
+            color: '#9b59b6',
+            fillOpacity: 0.5
+          }]
+        });
+      });
+  </script>
 </body>
 </html>
