--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+# Save the fully working HTML with panning and zooming enabled, and required scripts included
+html_content = """
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>168th Street Station in Manhattan</title>
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+  <script src="https://code.highcharts.com/modules/more.js"></script>
   <style>
     body {
       background-color: #1b1b1b;
@@ -100,7 +104,7 @@ function parseCSVRow(row) {
 fetch('168_station_data.csv')
   .then(res => res.text())
   .then(csv => {
-    const rows = csv.trim().split('\n').slice(1); // Skip header
+    const rows = csv.trim().split('\\n').slice(1);
     const data = rows.map(parseCSVRow);
 
     const tempData = data.map(d => [d.time, d.temp]);
@@ -110,7 +114,10 @@ fetch('168_station_data.csv')
     Highcharts.chart('tempChart', {
       chart: {
         zoomType: 'x',
-        panning: true,
+        panning: {
+          enabled: true,
+          type: 'x'
+        },
         pinchType: 'x'
       },
       title: { text: 'Temperature and Heat Index Over Time' },
@@ -132,7 +139,10 @@ fetch('168_station_data.csv')
       chart: {
         type: 'area',
         zoomType: 'x',
-        panning: true,
+        panning: {
+          enabled: true,
+          type: 'x'
+        },
         pinchType: 'x'
       },
       title: { text: 'Heat Excess (Heat Index - Temperature)' },
