--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
   <style>
     body {
       margin: 0;
-      padding: 20px;
+      padding: 10px;
       background-color: #1b1b1b;
       font-family: 'Helvetica Neue', Arial, sans-serif;
       color: #eee;
     }
     h2 {
       color: #eee;
-      font-size: 20px;
-      margin-top: 40px;
+      font-size: 18px;
+      margin-top: 30px;
       border-bottom: 1px solid #333;
     }
     .chart-container {
       width: 100%;
-      max-width: 1000px;
+      max-width: 100%;
       margin: auto;
+      box-sizing: border-box;
     }
     #tempChart, #excessChart {
       width: 100%;
-      height: 400px;
-      margin-top: 20px;
+      height: 300px;
+      margin-top: 15px;
     }
     .reset-btn {
-      padding: 10px 20px;
+      padding: 8px 16px;
       margin-top: 10px;
       cursor: pointer;
       background-color: #555;
@@ -38,6 +39,17 @@
       border: none;
       border-radius: 5px;
       font-size: 14px;
+    }
+    @media (min-width: 600px) {
+      #tempChart, #excessChart {
+        height: 400px;
+      }
+      body {
+        padding: 20px;
+      }
+      h2 {
+        font-size: 20px;
+      }
     }
   </style>
 </head>
@@ -58,6 +70,16 @@
     chart: {
       backgroundColor: '#1b1b1b',
       style: { fontFamily: 'Helvetica Neue, Arial, sans-serif' }
+    },
+    responsive: {
+      rules: [{
+        condition: { maxWidth: 600 },
+        chartOptions: {
+          legend: { enabled: false },
+          yAxis: { title: { text: null } },
+          xAxis: { labels: { format: '{value:%H:%M}' } }
+        }
+      }]
     },
     xAxis: {
       labels: { style: { color: '#ccc' } },
@@ -117,12 +139,7 @@
       charts.push(Highcharts.chart('tempChart', {
         chart: { zoomType: 'x' },
         title: { text: '' },
-        xAxis: {
-          type: 'datetime',
-          crosshair: true,
-          events: { setExtremes: syncExtremes },
-          title: { text: 'Time' }
-        },
+        xAxis: { type: 'datetime', crosshair: true, events: { setExtremes: syncExtremes } },
         yAxis: { title: { text: '°F' } },
         tooltip: { shared: true },
         series: [
@@ -134,20 +151,10 @@
       charts.push(Highcharts.chart('excessChart', {
         chart: { type: 'area', zoomType: 'x' },
         title: { text: '' },
-        xAxis: {
-          type: 'datetime',
-          crosshair: true,
-          events: { setExtremes: syncExtremes },
-          title: { text: 'Time' }
-        },
+        xAxis: { type: 'datetime', crosshair: true, events: { setExtremes: syncExtremes } },
         yAxis: { title: { text: 'Excess (°F)' } },
         tooltip: { shared: true },
-        series: [{
-          name: 'Heat Excess',
-          data: excessData,
-          color: '#9b59b6',
-          fillOpacity: 0.5
-        }]
+        series: [{ name: 'Heat Excess', data: excessData, color: '#9b59b6', fillOpacity: 0.5 }]
       }));
     });
 </script>
