--- a/D3.html
+++ b/D3.html
@@ -43,6 +43,13 @@
     .threshold {
       opacity: 0.2;
     }
+    .note {
+      font-size: 12px;
+      color: #aaa;
+      margin-top: -20px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -51,6 +58,7 @@
 <svg id="chart1"></svg>
 
 <h2>Heat Excess (Heat Index - Temp)</h2>
+<div class="note">Risk bands informed by Anderson & Bell (2009), <em>Environmental Health Perspectives</em>.</div>
 <svg id="chart2"></svg>
 
 <script>
